Added steps heading

--- a/recipes/Lime Cilantro Chicken/lime-cilantro-chicken.html
+++ b/recipes/Lime Cilantro Chicken/lime-cilantro-chicken.html
@@ -18,6 +18,7 @@
             <li>3 Tablespoons Chopped Fresh Cilantro</li>
             <li>3 Pounds Skinless, Boneless Chicken Thighs</li>
         </ul>
+        <h2>Steps</h2>
         <ol>
             <li> Gather all ingredients. </li>
             <li> Stir salsa, taco seasoning, lime juice, and cilantro together in a slow cooker until well combined. Add chicken and spoon salsa mixture over top to coat. </li>
